added GCS for clipperfiles + cleanup

--- a/Geonorge.Download/appsettings.json
+++ b/Geonorge.Download/appsettings.json
@@ -28,6 +28,10 @@
     "RedisConnection": "redis:6379"
   },
 
+  "Gcs": {
+    "Bucket": "",
+    "CredentialsPath": ""
+  },
 
 
   "GeoNetworkUrl": "",
