--- a/Geonorge.Download/Geonorge.Download.csproj
+++ b/Geonorge.Download/Geonorge.Download.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="Geonorge.AuthLib.Common" Version="2.0.0-alpha1" />
     <PackageReference Include="GeoNorgeAPI" Version="4.0.0-alpha1" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.70.0" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="4.13.0" />
     <PackageReference Include="Kartverket.Geonorge.Utilities" Version="2.0.0-alpha1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.17" />
@@ -45,8 +47,6 @@
   </ItemGroup>
 	
   <ItemGroup>
-	<Content Remove="wwwroot\clipperfiles\**" CopyToPublishDirectory="Never" Condition="'$(Configuration)' == 'Release'" />
-	<Content Remove="wwwroot\geonorge\**" CopyToPublishDirectory="Never" Condition="'$(Configuration)' == 'Release'" />
 	<None Include="node_modules\**" />
-	</ItemGroup>
+  </ItemGroup>
 </Project>
