fixed missing static files + added prefix for gcs clipper files

--- a/Geonorge.Download/Geonorge.Download.csproj
+++ b/Geonorge.Download/Geonorge.Download.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
 	
   <ItemGroup>
+	<None Include="wwwroot\**" CopyToPublishDirectory="Always" />
 	<None Include="node_modules\**" />
   </ItemGroup>
 </Project>
