--- a/Geonorge.Download/Geonorge.Download.csproj
+++ b/Geonorge.Download/Geonorge.Download.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <UserSecretsId>584ea991-0dd6-4722-a9c1-015d3e85b6b4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 	
   <ItemGroup>
