removed raw SQL expressions (using LINQ instead) + some cleanup

--- a/Geonorge.Download/appsettings.json
+++ b/Geonorge.Download/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console" ],
     "MinimumLevel": "Warning",
     "WriteTo": [
       { "Name": "Console" }
