auth settings + scheme

--- a/Geonorge.Download/appsettings.json
+++ b/Geonorge.Download/appsettings.json
@@ -34,42 +34,44 @@
   },
 
 
-  "GeoNetworkUrl": "",
-  "GeoNetworkUsername": "",
-  "GeoNetworkPassword": "",
-
-  "GeonorgeUsername": "",
-
-  "basicAuth": {
-    "users": [
-      {
-        "username": "",
-        "password": "",
-        "roles": [
-          { "name": "dataset-provider" }
-        ]
-      }
-    ]
-  },
-  "BasicAuthRoles": "",
-
-  "ExternalToken": {
-    "Token": ""
+  "GeoNetwork": {
+    "Url": "",
+    "Username": "",
+    "Password": "",
+    "GeonorgeUsername": ""
   },
 
-  "GeoID": {
-    "ClientId": "",
-    "ClientSecret": "",
-    "Authority": "",
-    "Issuer": "",
-    "RedirectUri": "",
-    "PostLogoutRedirectUri": "",
-    "MetadataAddress": "",
-    "IntrospectionUrl": "",
-    "IntrospectionCredentials": "",
-    "BaatAuthzApiUrl": "",
-    "BaatAuthzApiCredentials": ""
+  "auth": {
+    "oidc": {
+      "Authority": "",
+      "ClientId": "",
+      "ClientSecret": "",
+      "MetadataAddress": "",
+      "Issuer": "",
+      "IntrospectionUrl": "",
+      "IntrospectionCredentials": "",
+      "RedirectUri": "",
+      "PostLogoutRedirectUri": ""
+    },
+    "baat": {
+      "BaatAuthzApiUrl": "",
+      "BaatAuthzApiCredentials": ""
+    },
+    "ExternalToken": {
+      "Token": ""
+    },
+    "BasicAuth": {
+      "Users": [
+        {
+          "Username": "",
+          "Password": "",
+          "Roles": [ "dataset-provider" ]
+        }
+      ]
+    },
+    "BasicAuthRoles": ""
   },
+
 
   "MatrikkelEiendomEndpoint": "",
   "MatrikkelEiendomEndpointToken": "",
