--- a/Geonorge.Download/Geonorge.Download.csproj
+++ b/Geonorge.Download/Geonorge.Download.csproj
@@ -12,11 +12,12 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
-    <PackageReference Include="Geonorge.AuthLib.Common" Version="2.0.0-alpha1" />
-    <PackageReference Include="GeoNorgeAPI" Version="4.0.0-alpha1" />
+    <PackageReference Include="Geonorge.AuthLib.Common" Version="2.0.0-alpha4" />
+    <PackageReference Include="GeoNorgeAPI" Version="4.0.0-alpha3" />
     <PackageReference Include="Google.Apis.Auth" Version="1.70.0" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.13.0" />
     <PackageReference Include="Kartverket.Geonorge.Utilities" Version="2.0.0-alpha1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.17" />
@@ -39,6 +40,7 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="SimpleBlazorMultiselect" Version="0.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
   </ItemGroup>
 	
@@ -49,5 +51,9 @@
   <ItemGroup>
 	<None Include="wwwroot\**" CopyToPublishDirectory="Always" />
 	<None Include="node_modules\**" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Content Remove="wwwroot\js\gnDialogEvents.js" />
   </ItemGroup>
 </Project>
