docs, swagger examples + innlogging på internal API

--- a/Geonorge.Download/appsettings.json
+++ b/Geonorge.Download/appsettings.json
@@ -19,7 +19,7 @@
   "KartkatalogenUrl": "//kartkatalog.dev.geonorge.no/",
   "WebmasterEmail": "post@norgedigitalt.no",
   "SupportEmail": "dev@arkitektum.no",
-  "SmtpHost": "smtp.altibox.no",
+  "SmtpHost": "mail.statkart.no",
   "EnvironmentName": "dev",
   "SupportsMultiCulture": true,
 
