--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,21 +36,33 @@ services:
     networks:
       - geonorge-network
 
-  geonorge.download.db:
-    image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.18.0
-    command: >
-      --private-ip
-      --auto-iam-authn
-      --address 0.0.0.0
-      --port 5432
-      --credentials-file /tmp/application_default_credentials.json
-      datadeling-dev-e88f:europe-north1:geonorge-dev      
-    volumes:
-      - ./application_default_credentials.json:/tmp/application_default_credentials.json:ro
-    ports:
-      - "5432:5432"
-    networks:
-    - geonorge-network
+  # geonorge.download.db:
+  #   image: mcr.microsoft.com/mssql/server:2022-latest
+  #   ports:
+  #     - "1433:1433"
+  #   environment:
+  #     - ACCEPT_EULA=Y
+  #     - MSSQL_SA_PASSWORD=Your_password123
+  #     - MSSQL_PID=Developer
+    
+  #   networks:
+  #   - geonorge-network
+
+  # geonorge.download.db:
+  #   image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.18.0
+  #   command: >
+  #     --private-ip
+  #     --auto-iam-authn
+  #     --address 0.0.0.0
+  #     --port 5432
+  #     --credentials-file /tmp/application_default_credentials.json
+  #     datadeling-dev-e88f:europe-north1:geonorge-dev      
+  #   volumes:
+  #     - ./application_default_credentials.json:/tmp/application_default_credentials.json:ro
+  #   ports:
+  #     - "5432:5432"
+  #   networks:
+  #   - geonorge-network
 
   # geonorge.download.db:
   #   image: postgres:17.5
