--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -12,7 +12,7 @@
   <package id="Geonorge.AuthLib.Common" version="1.0.62" targetFramework="net48" />
   <package id="Geonorge.AuthLib.NetFull" version="1.0.62" targetFramework="net48" />
   <package id="GeoNorgeAPI" version="4.0.0-alpha3" targetFramework="net48" />
-  <package id="Kartverket.Geonorge.Utilities" version="1.0.60" targetFramework="net48" />
+  <package id="Kartverket.Geonorge.Utilities" version="2.0.0-alpha2" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net472" />
   <package id="MB.Owin.Logging.Log4Net" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
@@ -22,7 +22,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net472" />
@@ -32,6 +32,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0" targetFramework="net472" />
@@ -56,7 +57,8 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
   <package id="OctoPack" version="3.6.4" targetFramework="net472" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="ScottBrady91.AspNet.Identity.ConfigurablePasswordHasher" version="1.0.0" targetFramework="net452" />
