Do not wait for 7 days before sending info not deliverable

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -12,7 +12,7 @@
   </connectionStrings>
   <log4net debug="true">
     <root>
-      <priority value="DEBUG" />
+	  <level value="DEBUG" />
       <appender-ref ref="TraceAppender" />
       <appender-ref ref="LogFileAppender" />
     </root>
