Update transform for log4net

--- a/Kartverket.Geonorge.Download/Web.Test.config
+++ b/Kartverket.Geonorge.Download/Web.Test.config
@@ -27,7 +27,7 @@
 
   <log4net debug="true">
     <root>
-      <priority value="INFO" xdt:Transform="Replace" />
+      <level value="INFO" xdt:Transform="Replace" />
     </root>
   </log4net>
 </configuration>
